fixed spacing in card info

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,5 +42,8 @@
   border: solid 1px $grey-opac;
   padding: 15px;
   margin-bottom: 20px;
+  p {
+    margin: 0;
+  }
 }
 
